--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
-    <script src="js/main.js" type="module"></script>
-    <link href="css/style.css" />
+    <script src="./js/main.js" type="module"></script>
+    <link href="./css/style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
 
     <div class="loading"></div>
     <div class="ready"></div>
+
+    <button onclick="">button</button>
 </body>
 </html>
