--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
+    <script src="https://unpkg.com/interactjs@next/dist/interact.min.js"></script>
     <script src="./js/main.js" type="module"></script>
     <link href="./css/style.css" type="text/css" rel="stylesheet" />
 </head>
