interface mostly complete

--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
                 <div class="shadow"></div>
             </div>
             
-            <div class="draggable stamper">
-                <div class="stamper real">
+            <div class="draggable stamper real">
+                <div class="stamper">
                     <div class="green"></div>
                     <div class="stamp"></div>
                 </div>
@@ -48,8 +48,8 @@
             </div>
 
 
-            <div class="draggable stamper">
-                <div class="stamper fake">
+            <div class="draggable stamper fake">
+                <div class="stamper">
                     <div class="red"></div>
                     <div class="stamp"></div>
                 </div>
